# CMAKE_TUTORIAL

./: .gitignore  README.md
step1/: CMakeLists.txt  config.h.in  main.cpp
step2/: CMakeLists.txt
step2/MyMath/: CMakeLists.txt  MyMath.cpp
step3/: CMakeLists.txt
step3/MyMath/: CMakeLists.txt  MyMath.cpp
step4/: CMakeLists.txt  main.cpp
step4/MyMath/: CMakeLists.txt  MyMath.h
step5/: CMakeLists.txt  main.cpp
step5/MyMath/: CMakeLists.txt
step5/install/lib/: mymath.lib
